--- a/test.qmd
+++ b/test.qmd
@@ -279,8 +279,8 @@ coxphfit = coxph(@formula(event ~ trt + age + sex + ascites + albumin + protime)
 kmfit = fit(KaplanMeier, dat_glm.event)
 km_conf =confint(kmfit)
 
-km_conf_df = DataFrame(lower = [x[1] for x in km_conf], higher = [x[2] for x in km_conf]) 
-push!(km_conf_df, (1, 1))
+lower = [1; [x[1] for x in km_conf]]
+higher = [1; [x[2] for x in km_conf]]
 
 ourtime = [0; kmfit.events.time]
 survival_rate = [1; kmfit.survival]
@@ -289,7 +289,9 @@ n_atrisk = [nrow(dat_glm); kmfit.events.natrisk]
 km_dat = DataFrame(
   ourtimes = ourtime, 
   survival_rate = survival_rate, 
-  n_atrisk = n_atrisk
+  n_atrisk = n_atrisk, 
+  lower = lower, 
+  higher = higher
   )
 
 function closest_subset(km_dat, set_times)
@@ -323,6 +325,7 @@ using CairoMakie
 f = Figure()
 ax1 = Axis(f[1, 1], title="Kaplan-Meier Curve", xlabel="Time", ylabel="Survival Rate", xticks=collect(0:1000:5500) ,limits = (0, 5500, 0.85, 1))
 stairs!(ax1, ourtime, survival_rate; step=:post, color=:blue)
+band!(ax1, ourtime ,higher, lower ; color = (:blue, 0.2))
 ax2 = Axis(f[2, 1], title="Number at risk", xticks=collect(0:1000:5500), xlabel="")
 hidespines!(ax2, :t, :r) # only top and right
 linkxaxes!(ax1, ax2)
