start advanced KM curve

--- a/test.qmd
+++ b/test.qmd
@@ -337,3 +337,28 @@ f
 
 
 ```
+
+# KM with two curve
+```{julia}
+using CairoMakie
+
+# f = Figure()
+
+# stairs(f[1, 1], ourtime, survival_rate; step=:post, color=:blue)
+# # stairs(f[3, 1], xs, ys; step=:center, color=:red, linestyle=:dot)
+
+f = Figure()
+ax1 = Axis(f[1, 1], title="Kaplan-Meier Curve", xlabel="Time", ylabel="Survival Rate", xticks=collect(0:1000:5500) ,limits = (0, 5500, 0.85, 1))
+stairs!(ax1, ourtime, survival_rate; step=:post, color=:blue)
+band!(ax1, ourtime ,higher, lower ; color = (:blue, 0.2))
+ax2 = Axis(f[2, 1], title="Number at risk", xticks=collect(0:1000:5500), xlabel="")
+hidespines!(ax2, :t, :r) # only top and right
+linkxaxes!(ax1, ax2)
+hideydecorations!(ax2)
+text!(ax2, repeat(set_times, inner=1), ones(Int, length(set_times)), text=string.(res[:, :n_atrisk]), align = (:center, :center))
+
+
+f
+
+
+```
