start two lines of km plot

--- a/test.qmd
+++ b/test.qmd
@@ -463,6 +463,22 @@ res = vcat(set_rows..., cols=:union)
 ```{julia}
 
 # make two 
+using CairoMakie
 
+
+f = Figure()
+ax1 = Axis(f[1, 1], title="Kaplan-Meier Curve", xlabel="Time", ylabel="Survival Rate", xticks=collect(0:1000:5500) ,limits = (0, 5500, 0.5, 1))
+stairs!(ax1, expanded_dfs[1][!, :survtime], expanded_dfs[1][!, :survival]; step=:post, color = :blue)
+stairs!(ax1, expanded_dfs[2][!, :survtime], expanded_dfs[2][!, :survival]; step=:post, color = :red)
+band!(ax1, expanded_dfs[1][!, :survtime] , expanded_dfs[1][!, :higher], expanded_dfs[1][!, :lower]; color = (:blue, 0.2))
+band!(ax1, expanded_dfs[2][!, :survtime] , expanded_dfs[2][!, :higher], expanded_dfs[2][!, :lower]; color = (:red, 0.2))
+ax2 = Axis(f[2, 1], title="Number at risk", titlealign = :left, xticks=collect(0:1000:5500), xlabel="")
+hidespines!(ax2, :t, :r) # only top and right
+linkxaxes!(ax1, ax2)
+hideydecorations!(ax2)
+# text!(ax2, repeat(set_times, inner=2), ones(Int, length(set_times)), text=string.(res[:, :n_atrisk]), align = (:center, :center))
+# rowsize!(f.layout, 2, Relative(1/3))
+
+f
 
 ```
